applications/icinga/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: icinga-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 172.31.50.146
  listeners:
    - name: icinga-tcp-listener
      protocol: TLS
      port: 5665
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: icinga-api-tls-route
  annotations:
    external-dns.kubernetes.io/hostname: icinga2-master.services.sbling.net
spec:
  parentRefs:
    - name: icinga-gateway
  rules:
    - backendRefs:
        - name: icinga-icinga2
          port: 5665
